<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaxActivity">

    <TextView
        android:id="@+id/vladescu_alexandra_bianca_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_tilAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tietAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tax_account_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_tilAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_tilAccountNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tietAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tax_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/vladescu_alexandra_bianca_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tax_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>